@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/Logger.cpp)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(logger, 0.0.0-9)
+AM_INIT_AUTOMAKE(rainbrurpg-logger, 0.0.0-9)
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION(0.18) 
 
